fixtures/fail/release-artifacts/release-artifacts.php
<?php
/**
 * Plugin Name: Release Artifacts Fixture
 * Description: Failing fixture for forbidden release artifacts.
 * Version: 2.0.0
 * Author: Sant Limited
 * Text Domain: release-artifacts
 */

defined( 'ABSPATH' ) || exit;

function release_artifacts_fixture_boot() {
	return true;
}
